--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,13 +1,33 @@
-# Use the latest 2.1 version of CircleCI pipeline process engine. See: https://circleci.com/docs/2.0/configuration-reference
 version: 2.1
-# Use a package of configuration called an orb.
-orbs:
-  # Declare a dependency on the welcome-orb
-  welcome: circleci/welcome-orb@0.4.1
-# Orchestrate or schedule a set of jobs
+default: &defaults
+  docker:
+    - image: node:13.8.0
+
+jobs:
+  build:
+    <<: *defaults
+    steps:
+      - checkout
+      - run: npm i
+      - run: npm run lint
+  test:
+    <<: *defaults
+    steps:
+      - checkout
+      - run: npm i
+      - run: npm run test
+  analyze:
+    <<: *defaults
+    steps:
+      - checkout
+      - run: npm audit
 workflows:
-  # Name the workflow "welcome"
-  welcome:
-    # Run the welcome/run job in its own container
+  my_test_workflow:
     jobs:
-      - welcome/run
+      - build
+      - test:
+          requires:
+            - build
+      - analyze:
+          requires:
+            - test
