implemented caching on jobs

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,11 +9,18 @@ jobs:
     steps:
       - checkout
       - run: npm i
+      - save_cache:
+          paths:
+            - /src/node_modules
+          key: "npm-packages"
       - run: npm run lint
   test:
     <<: *defaults
     steps:
       - checkout
+      - restore_cache:
+          keys:
+            - "npm-packages"
       - run: npm i
       - run: npm run test
   analyze:
@@ -21,6 +28,11 @@ jobs:
     steps:
       - checkout
       - run: npm audit
+      - run:
+          when: on_fail
+          command: npm audit fix
+
+
 workflows:
   my_test_workflow:
     jobs:
